crates/minibox-core/tests/snapshots/protocol_evolution__daemon_request_run_pipeline_snapshot.snap
---
source: crates/minibox-core/tests/protocol_evolution.rs
expression: req
---
{
  "type": "RunPipeline",
  "pipeline_path": "/workspace/.crux/pipelines/work.crux",
  "input": {
    "prompt": "hello"
  },
  "image": null,
  "budget": null,
  "env": [
    [
      "CRUX_LOG",
      "debug"
    ]
  ],
  "max_depth": 3,
  "priority": null,
  "urgency": null,
  "execution_context": null
}
