crates/minibox-core/tests/snapshots/protocol_evolution__run_pipeline_request_minimal_snapshot.snap
---
source: crates/minibox-core/tests/protocol_evolution.rs
expression: req
---
{
  "type": "RunPipeline",
  "pipeline_path": "work.cruxx",
  "input": null,
  "image": null,
  "budget": null,
  "env": [],
  "max_depth": 3,
  "priority": null,
  "urgency": null,
  "execution_context": null
}
